--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="HeaderImageGrid">
                     <div class="LargeHeaderImage">
-                        <img src="images/LargePhoto.JPG" alt="Three CuseHacks participants working on their project">
+                        <img src="images/LargePhoto.jpeg" alt="Three CuseHacks participants working on their project">
                     </div>
                     <div class="SmallHeaderImageGrid">
                     <img src="images/SmallPhoto1.JPG" class="SmallHeaderImage">
