--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
                 <p>Students from all over Syracuse University will come together to create an app, website, or whatever tech project you want to create in the 24 hours that you have.</p>
             </div>
             <div class="ContentBlock Card">
-                <h2 class="Heading4">Why should I come</h2>
+                <h2 class="Heading4">Why should I come?</h2>
                 <p>There will be games, food, and prizes! Build something or break something, you'll have fun meeting new people, working with friends, and gaining new skills!</p>
             </div>
             <div class="ContentBlock Card">
-                <h2 class="Heading4">Who can come</h2>
+                <h2 class="Heading4">Who can come?</h2>
                 <p>Anyone can come! No matter if you're a hackathon veteran or if you have never heard of one before, you'll have a great time!</p>
             </div>
         </div>
