--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="HeaderText">
                     <h1 class="Heading1">CuseHacks 2023:</h1>
                 <p class="Heading2Header">CREATE SOMETHING AWESOME!</p>
-                    <p class="Heading4">October 14 – 15 on the third floor of the Schine Student Center</p>
+                    <p class="Heading4">December 2nd and 3rd on the third floor of the Schine Student Center</p>
                     <a href="https://forms.gle/8cm2ZdenKjngjDbu7" target="_blank"><button class="PrimaryButtonFill">Sign up</button></a>
                     <div class="HeaderSponsorship">
                         <a href="Sponsorship Package.pdf" target="_blank" class="Link">Download sponsorship package</a>
