--- a/index.html
+++ b/index.html
@@ -113,11 +113,10 @@
         <div class="ContentBlock Sponsors">
             <h2 class="Heading2">Sponsors</h2>
             <div class="SponsorGroup">
-                <div class="SponsorLogo"><img src="images/eecs-logo.svg" alt="Logo for the Syracuse University College of Engineering and Computer Science"></div>
-                <div class="SponsorLogo"><img src="images/eecs-logo.svg" alt="Logo for the Syracuse University College of Engineering and Computer Science"></div>
-                <div class="SponsorLogo"><img src="images/eecs-logo.svg" alt="Logo for the Syracuse University College of Engineering and Computer Science"></div>
-                <div class="SponsorLogo"><img src="images/eecs-logo.svg" alt="Logo for the Syracuse University College of Engineering and Computer Science"></div>
-                <div class="SponsorLogo"><img src="images/eecs-logo.svg" alt="Logo for the Syracuse University College of Engineering and Computer Science"></div>
+                <div class="SponsorLogo"><img src="images/sponsor-logos/EECS-logo.png" alt="Logo for the Syracuse University College of Engineering and Computer Science"></div>
+                <div class="SponsorLogo"><img src="images/sponsor-logos/NewhouseLogo.png" alt="Logo for the Newhouse Visual Communications Department"></div>
+                <div class="SponsorLogo"><img src="images/sponsor-logos/BlackstoneLaunchpadLogo.png" alt="Logo for the BlackstoneLaunchpad"></div>
+                <div class="SponsorLogo"><img src="images/sponsor-logos/DensityLogo.png" alt="Logo for Density"></div>
                 
             </div>
             
