--- a/index.html
+++ b/index.html
@@ -107,7 +107,31 @@
         
         <div class="ContentBlock Schedule">
             <h2 class="Heading2">Schedule</h2>
-            <p class="body">Stay tuned...</p>
+            <img src="images/ScheduleForWeb.jpg" alt="CUSEHACKS
+            2023
+            SATURDAY
+            12:00 PM Hacking begins • Lunch
+            1:00 PM
+            Intro to Coding
+            2:00 PM
+            Alpha Omega Epsilon Women in STEM Panel
+            3:00 PM
+            Infosecurity Club Lockpicking Workshop
+            4:00 PM
+            Freelance Programming Talk by Glenn Allen
+            6:00 PM
+            Dinner • IEEE Networking Dinner
+            7:00 PM Linkedln Exchange
+            8:00 PM UI Design Workshop • Schine Scavenger Hunt
+            9:00 PM Power Apps Workshop • Pipe Cleaner Animal DIY
+            10:00 PM Power Automate Workshop • Jackbox Game
+            11:00 PM MATLAB Workshop
+            SUNDAY
+            12:00 AM Smash Bros Tournament
+            7:30 AM Breakfast
+            12:00 PM Hacking ends • Lunch
+            12 - 4 PM Judging
+            4:00 PM Closing Ceremony" class="ScheduleImg">
         </div>
 
         <div class="ContentBlock Sponsors">
