--- a/index.html
+++ b/index.html
@@ -96,9 +96,10 @@
     <footer>
       <!-- <img src="images/CuseHacks-2024-Lockup.png" alt="CuseHacks 2023 Logo" class="FooterLogo"> -->
         <div class="SocialMediaIconGroup">
-            <a href="https://www.instagram.com/cusehacks/"><img src="images/instagram-icon.svg" class="SocialMediaIcon" alt="Instagram"></a>
+            <a href="https://discord.gg/FcyyJ7VHau" target="_blank"><img src="images/discord-icon.svg" class="SocialMediaIcon" alt="Discord"></a>
+            <a href="https://www.instagram.com/cusehacks/" target="_blank"><img src="images/instagram-icon.svg" class="SocialMediaIcon" alt="Instagram"></a>
             <!-- <a href=""><img src="images/facebook-icon.svg" class="SocialMediaIcon" alt="Facebook"></a> -->
-            <a href="https://twitter.com/CuseHacks"><img src="images/twitter-icon.svg" class="SocialMediaIcon" alt="Twitter"></a>
+            <a href="https://twitter.com/CuseHacks" target="_blank"><img src="images/twitter-icon.svg" class="SocialMediaIcon" alt="Twitter"></a>
         </div>
         
     </footer>
