--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
         <div class="HeroContent">
             <div class="HeroText">
                 <h1>Create something <span>awesome</span></h1>
-                <h2>Build, code, design, and learn at CuseHacks 2024!</h2>
-                <p>Date, time, and location TBD.</p>
+                <h2>Build, code, design, and learn during CuseHacks Beta 2024, running from March 1st to 31st!</h2>
             </div>
             <div class="ButtonGroup">
                 <a class="PrimaryButton" href="https://docs.google.com/forms/d/e/1FAIpQLSdGMxdgOncnW_qsf_-sHz4nIhUHlq0zrKjqo1IgkBAkdehVBg/viewform" target="_blank">Sign up</a>
@@ -58,11 +57,11 @@
                             <p> You'll build an app, website, game, or any other tech project you can imagine!</p>
                         </div>
                         <div class="ContentCard">
-                            <h3>Why should I come?</h3>
-                            <p>Learn new skills and expand your network! There will also be games, food, and prizes!</p>
+                            <h3>Why should I participate?</h3>
+                            <p>Learn new skills, make a cool project, and even win a prize!</p>
                         </div>
                         <div class="ContentCard">
-                            <h3>Who can come?</h3>
+                            <h3>Who can participate?</h3>
                             <p>Students of all experience levels are welcome, from newcomers to experts!</p>
                         </div>
                     </div>
