--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="ButtonGroup">
                 <a class="PrimaryButton" href="https://docs.google.com/forms/d/e/1FAIpQLSdGMxdgOncnW_qsf_-sHz4nIhUHlq0zrKjqo1IgkBAkdehVBg/viewform" target="_blank">Sign up</a>
-                <a class="SecondaryButton" href="Sponsorship-package.pdf" target="_blank">Sponsorship package</a>
+                <a class="SecondaryButtonInactive">Sponsorship package coming soon!</a>
             </div>
         </div>
     </header>
@@ -85,7 +85,7 @@
                 <div class="CallToActionSection">
                     <div class="ButtonGroup">
                         <a class="PrimaryButton" href="https://docs.google.com/forms/d/e/1FAIpQLSdGMxdgOncnW_qsf_-sHz4nIhUHlq0zrKjqo1IgkBAkdehVBg/viewform" target="_blank">Sign up</a>
-                        <a class="SecondaryButton" href="Sponsorship-package.pdf" target="_blank">Sponsorship package</a>
+                        <a class="SecondaryButtonInactive">Sponsorship package coming soon!</a>
                         <a class="SecondaryButton" href="mailto:innovateorange@syr.edu" target="_blank">Email us</a>
                     </div>
                 </div>
