--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="ButtonGroup">
                         <a class="PrimaryButton" href="https://docs.google.com/forms/d/e/1FAIpQLSdGMxdgOncnW_qsf_-sHz4nIhUHlq0zrKjqo1IgkBAkdehVBg/viewform" target="_blank">Sign up</a>
                         <a class="SecondaryButtonInactive">Sponsorship package coming soon!</a>
-                        <a class="SecondaryButton" href="mailto:innovateorange@syr.edu" target="_blank">Email us</a>
+                        <a class="SecondaryButton" href="mailto:innovateorange@gmail.com" target="_blank">Email us</a>
                     </div>
                 </div>
             </section>
