--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="HeroContent">
             <div class="HeroText">
-                <h1>Create something <span>awesome</span></h1>
+                <h1>Create something <span>Amaizing</span></h1>
                 <h2>Build, code, design, and learn during CuseHacks Beta 2024, running from March 1st to 31st!</h2>
             </div>
             <div class="ButtonGroup">
