--- a/index.html
+++ b/index.html
@@ -36,20 +36,21 @@
         </div>
         <div class="HeroContent">
             <div class="HeroText">
-                <h1>Create something <span>Amaizing</span></h1>
+                <h1>Create something <span>awesome</span></h1>
                 <h2>Build, code, design, and learn during CuseHacks Beta 2024, running from March 1st to 31st!</h2>
+                <p class="LargeParagraph">Kickoff event on Friday, March 1st from 4:00 to 7:00 PM in Link Hall room 369.</p>
             </div>
             <div class="ButtonGroup">
                 <a class="PrimaryButton" href="https://docs.google.com/forms/d/e/1FAIpQLSdGMxdgOncnW_qsf_-sHz4nIhUHlq0zrKjqo1IgkBAkdehVBg/viewform" target="_blank">Sign up</a>
-                <a class="SecondaryButtonInactive">Sponsorship package coming soon!</a>
+                <a class="SecondaryButton" href="sponsorship-package.pdf" target="_blank">Sponsorship package</a>
             </div>
         </div>
     </header>
     <main>
         <div class="MainContent">
-            <section> <!-- Basic info section -->
-                <h2>What is CuseHacks?</h2>
-                <div class="TwoColContainer">
+            <section class="FaqGroup"> <!-- Basic info section -->
+                <h2>FAQ</h2>
+                
                     <div class="InfoSection">
                         
                         <div class="ContentCard">
@@ -60,16 +61,52 @@
                             <h3>Why should I participate?</h3>
                             <p>Learn new skills, make a cool project, and even win a prize!</p>
                         </div>
+                    </div>
+                    <div class="InfoSection">
                         <div class="ContentCard">
-                            <h3>Who can participate?</h3>
-                            <p>Students of all experience levels are welcome, from newcomers to experts!</p>
+                            <h3>Can I have a team?</h3>
+                            <p>For this month-long hackathon, no teams are allowed.</p>
+                        </div>
+                        <div class="ContentCard">
+                            <h3>Who can participate</h3>
+                            <p>College students in the CNY area (undergraduate AND graduate students are both welcome).</p>
+                        </div>
+                        <div class="ContentCard">
+                            <h3>Is this event in-person or virtual?</h3>
+                            <p>The kickoff and the awards ceremony will both be in-person. The rest of the hackathon will be remote.</p>
                         </div>
                     </div>
-                    <!-- <div class="ImageGroup">
-                        <img class="SupportingImage" src="images/info-section-image.jpg" alt="Three winners of a CuseHacks section standing in front of a board with their names and their project on it. The students are each holding a prize">
-
-                    </div> -->
-                </div>
+                    <div class="InfoSection">
+                        <div class="ContentCard">
+                            <h3>Is there a theme?</h3>
+                            <p>Nope! You can create whatever project you want using any platforms or languages that you want!</p>
+                        </div>
+                            <div class="ContentCard">
+                                <h3>Can I submit a project that I have worked on before March 1?</h3>
+                                <p>No. All projects must be started during the hackathon in March</p>
+                            </div>
+                            <div class="ContentCard">
+                                <h3>Can I submit class projects?</h3>
+                                <p>We discourage you from submitting a class project, but if you really want to, you must have done all of the work on the project during the month of March.</p>
+                            </div>
+                            <div class="ContentCard">
+                                <h3>When and how do I submit my project?</h3>
+                                <p>You can submit your project anytime before April 1st. You should submit your project on our Devpost</p>
+                            </div>
+                        </div>
+                    <div class="InfoSection">
+                        <div class="ContentCard">
+                            <h3>What if I need help?</h3>
+                            <p>We are providing support both virtually and in-person. In-person support will be offered every Saturday from 1:00 to 5:00 PM in Life Sciences Room 011. For virtual support, check our <a class="InlineLink" href="https://discord.gg/FcyyJ7VHau">Discord</a></p>
+                        </div>
+                        <div class="ContentCard">
+                            <h3>Can I use ChatGPT or similar platforms to write my code?</h3>
+                            <p>While it is ok to use AI for quick questions or research, <span class="BodyBold">the vast majority of your code should be written by you. Any plagiarism or cheating will be disqualified.</span> Any code from outside sources should be documented within your code as comments.</p>
+                        </div>
+                        <div class="ContentCard">
+                            <h3>Can I spend money on my project?</h3>
+                            <p>We recommend you stick to free platforms, as we will not be providing funds.</p>
+                        </div> 
             </section>
             <section> <!-- Past sponsors section -->
                 <h2>Past sponsors</h2>
@@ -85,7 +122,7 @@
                 <div class="CallToActionSection">
                     <div class="ButtonGroup">
                         <a class="PrimaryButton" href="https://docs.google.com/forms/d/e/1FAIpQLSdGMxdgOncnW_qsf_-sHz4nIhUHlq0zrKjqo1IgkBAkdehVBg/viewform" target="_blank">Sign up</a>
-                        <a class="SecondaryButtonInactive">Sponsorship package coming soon!</a>
+                        <a class="SecondaryButton" href="sponsorship-package.pdf" target="_blank">Sponsorship package</a>
                         <a class="SecondaryButton" href="mailto:innovateorange@gmail.com" target="_blank">Email us</a>
                     </div>
                 </div>
