--- a/index.html
+++ b/index.html
@@ -61,12 +61,6 @@
                             <h3>Why should I participate?</h3>
                             <p>Learn new skills, make a cool project, and even win a prize!</p>
                         </div>
-                    </div>
-                    <div class="InfoSection">
-                        <div class="ContentCard">
-                            <h3>Can I have a team?</h3>
-                            <p>For this month-long hackathon, no teams are allowed.</p>
-                        </div>
                         <div class="ContentCard">
                             <h3>Who can participate</h3>
                             <p>College students in the CNY area (undergraduate AND graduate students are both welcome).</p>
@@ -77,6 +71,10 @@
                         </div>
                     </div>
                     <div class="InfoSection">
+                        <div class="ContentCard">
+                            <h3>Can I have a team?</h3>
+                            <p>For this month-long hackathon, no teams are allowed.</p>
+                        </div>
                         <div class="ContentCard">
                             <h3>Is there a theme?</h3>
                             <p>Nope! You can create whatever project you want using any platforms or languages that you want!</p>
@@ -89,12 +87,15 @@
                                 <h3>Can I submit class projects?</h3>
                                 <p>We discourage you from submitting a class project, but if you really want to, you must have done all of the work on the project during the month of March.</p>
                             </div>
-                            <div class="ContentCard">
-                                <h3>When and how do I submit my project?</h3>
-                                <p>You can submit your project anytime before April 1st. You should submit your project on our Devpost</p>
-                            </div>
-                        </div>
+                    </div>
                     <div class="InfoSection">
+                        
+                    </div>
+                    <div class="InfoSection">
+                        <div class="ContentCard">
+                            <h3>When and how do I submit my project?</h3>
+                            <p>You can submit your project anytime before April 1st. You should submit your project on our Devpost</p>
+                        </div>
                         <div class="ContentCard">
                             <h3>What if I need help?</h3>
                             <p>We are providing support both virtually and in-person. In-person support will be offered every Saturday from 1:00 to 5:00 PM in Life Sciences Room 011. For virtual support, check our <a class="InlineLink" href="https://discord.gg/FcyyJ7VHau">Discord</a></p>
@@ -117,7 +118,7 @@
                     <img class="SponsorLogo" src="images/sponsor-logos/mlh-logo.png" alt="MLH logo">
                 </div>
             </section>
-            <section> <!-- Call to action section -->
+            <section class="getInvolvedSection"> <!-- Call to action section -->
                 <h2>Get involved</h2>
                 <div class="CallToActionSection">
                     <div class="ButtonGroup">
