added devpost button

--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
                 <p class="LargeParagraph">Kickoff event on Friday, March 1st from 4:00 to 7:00 PM in Link Hall room 369.</p>
             </div>
             <div class="ButtonGroup">
-                <a class="PrimaryButton" href="https://docs.google.com/forms/d/e/1FAIpQLSdGMxdgOncnW_qsf_-sHz4nIhUHlq0zrKjqo1IgkBAkdehVBg/viewform" target="_blank">Sign up</a>
+                <a class="PrimaryButton " href="https://cusehacks-beta-2024.devpost.com/" target="_blank">Join Hackathon</a>
+                <a class="PrimaryButton" href="https://docs.google.com/forms/d/e/1FAIpQLSdGMxdgOncnW_qsf_-sHz4nIhUHlq0zrKjqo1IgkBAkdehVBg/viewform" target=" ">Sign up</a>
                 <a class="SecondaryButton" href="sponsorship-package.pdf" target="_blank">Sponsorship package</a>
             </div>
+            
         </div>
     </header>
     <main>
