mobile style and submit project button

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
         <div class="NavBarImage">
             <a href="index.html"><img src="images/CuseHacks-2024-Lockup.png" alt="CuseHacks 2023"></a>
         </div>
+        <div class="MobileNav">
+            <div>
+                <a href="index.html"><img src="images/LogoBrainPurple.png" alt="CuseHacks 2023" height="50"></a>
+            </div>
+            <div>
+                <a class="SecondaryButton " href="https://cusehacks-beta-2024.devpost.com/" target="_blank">Submit project</a>
+            </div>
+        </div>
        
     </nav>
     <header>
@@ -41,8 +49,8 @@
                 <p class="LargeParagraph">Kickoff event on Friday, March 1st from 4:00 to 7:00 PM in Link Hall room 369.</p>
             </div>
             <div class="ButtonGroup">
-                <a class="PrimaryButton " href="https://cusehacks-beta-2024.devpost.com/" target="_blank">Join Hackathon</a>
-                <a class="PrimaryButton" href="https://docs.google.com/forms/d/e/1FAIpQLSdGMxdgOncnW_qsf_-sHz4nIhUHlq0zrKjqo1IgkBAkdehVBg/viewform" target=" ">Sign up</a>
+                <a class="PrimaryButton " href="https://cusehacks-beta-2024.devpost.com/" target="_blank">Submit project</a>
+                <a class="SecondaryButton" href="https://docs.google.com/forms/d/e/1FAIpQLSdGMxdgOncnW_qsf_-sHz4nIhUHlq0zrKjqo1IgkBAkdehVBg/viewform" target=" ">Sign up</a>
                 <a class="SecondaryButton" href="sponsorship-package.pdf" target="_blank">Sponsorship package</a>
             </div>
             
@@ -124,7 +132,8 @@
                 <h2>Get involved</h2>
                 <div class="CallToActionSection">
                     <div class="ButtonGroup">
-                        <a class="PrimaryButton" href="https://docs.google.com/forms/d/e/1FAIpQLSdGMxdgOncnW_qsf_-sHz4nIhUHlq0zrKjqo1IgkBAkdehVBg/viewform" target="_blank">Sign up</a>
+                        <a class="PrimaryButton " href="https://cusehacks-beta-2024.devpost.com/" target="_blank">Submit project</a>
+                        <a class="SecondaryButton" href="https://docs.google.com/forms/d/e/1FAIpQLSdGMxdgOncnW_qsf_-sHz4nIhUHlq0zrKjqo1IgkBAkdehVBg/viewform" target="_blank">Sign up</a>
                         <a class="SecondaryButton" href="sponsorship-package.pdf" target="_blank">Sponsorship package</a>
                         <a class="SecondaryButton" href="mailto:innovateorange@gmail.com" target="_blank">Email us</a>
                     </div>
