--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="HeroText">
                 <h1>Create something <span>awesome</span></h1>
                 <h2>Build, code, design, and learn during CuseHacks Beta 2024, running from March 1st to 31st!</h2>
-                <p class="LargeParagraph">Award Ceremony, April 5th 4pm in Link Hall room 369.</p>
+                <p class="LargeParagraph">Award ceremony: April 5th, 4pm in Link Hall Room 369.</p>
             </div>
             <div class="ButtonGroup">
                 <a class="PrimaryButton " href="https://cusehacks-beta-2024.devpost.com/" target="_blank">Submit project</a>
