--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <div class="NavBarImage">
             <a href="index.html"><img src="images/CuseHacks-2024-Lockup.png" alt="CuseHacks 2023"></a>
         </div>
-        <div class="MobileNav">
-<!--             <div>
+<!--         <div class="MobileNav">
+            <div>
                 <a href="index.html"><img src="images/LogoBrainPurple.png" alt="CuseHacks 2023" height="50"></a>
-            </div> -->
+            </div>
             <div>
                 <a class="SecondaryButton " href="https://cusehacks-beta-2024.devpost.com/" target="_blank">Submit project</a>
             </div>
-        </div>
+        </div> -->
        
     </nav>
     <header>
